hphp/hack/test/typecheck/reactive/mutable_args_to_ctor1.php
<?hh // partial

class B {
  <<__Rx>>
  public function __construct() {
  }
}

class A {
  <<__Rx>>
  public function __construct(B $a) {
  }
}

<<__Rx>>
function f(): void {
  $b = \HH\Rx\mutable(new B());
  // ERROR: passing mutable as immutable
  $v1 = new A($b);
}
